style.css
@font-face {
  font-family: font-bold;
  src: url(/fonts/SourceSansPro-Bold.ttf);
  font-display: swap;
}

@font-face {
  font-family: font-regular;
  src: url(/fonts/SourceSansPro-Regular.ttf);
  font-display: swap;
}

:root {
  --bold-font: "font-bold";
  --regular-font: "font-regular";
  --primary-color: black;
  --secundary-color: white;
}

html {
  scroll-behavior: smooth;
}

body {
  box-sizing: border-box;
  margin: auto 0;
  font-family: var(--regular-font);
}

.hidden {
  display: none;
}

/* buttons */

.btn {
  cursor: pointer;
  transition: 0.4s;
}

.btn:hover {
  background-color: var(--secundary-color);
  color: var(--primary-color);
  transition: 0.4s;
}

.button-preferences {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 13em;
  max-width: 16em;
  flex: 1;
}

.button-accept {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 13em;
  max-width: 16em;
  flex: 1;
}

.button-decline {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 13em;
  max-width: 16em;
  flex: 1;
}

.button-save {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 10em;
  max-width: 16em;
  flex: 1;
}
.button-decline-all {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 10em;
  max-width: 16em;
  flex: 1;
}

.button-accept-all {
  background-color: var(--primary-color);
  color: var(--secundary-color);
  font-size: 1em;
  font-family: var(--bold-font);
  padding: 0.625em 1em;
  border-radius: 3px;
  border: 1px var(--primary-color) solid;
  width: 10em;
  max-width: 16em;
  flex: 1;
}

/* Styles first banner */
.banner {
  position: fixed;
  z-index: 99;
  top: 0;
  left: 0;
  display: flex;
  transition: visibility 0s, opacity 0.5s ease-in-out;
  visibility: hidden;
  opacity: 0;
  background: rgba(73, 73, 73, 0.8);
  width: 100%;
  height: 100vh;
  justify-content: center;
  align-items: center;
}

.banner-wrapper {
  width: 70%;
  max-width: 700px;
  height: auto;
  background: var(--secundary-color);
  border-radius: 10px;
  padding: 2em;
}

.banner-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.banner-title {
  font-family: var(--bold-font);
  font-size: 1.125em;
  margin-top: 0.5em;
  align-self: flex-start;
}

.banner-text {
  line-height: 1.75;
  font-size: 0.9em;
  margin: 0;
}

.banner-link {
  color: var(--primary-color);
}

.banner-link:hover {
  color: grey;
}

.banner-buttons-wrapper {
  margin-top: 1.5em;
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

/* close button purpose banner */

.close-purposes-banner-wrapper {
  margin-top: -0.3em;
}

.button-x-close {
  background-color: transparent;
  border: none;
  font-size: 15px;
  cursor: pointer;
  outline: none;
  display: flex;
  justify-content: flex-end;
  width: 100%;
  padding: 0;
}

.buttons-purpose-wrapper {
  padding: 2.5em 1em 0;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 15px;
}

/* Purpose second banner */
.purposes-banner {
  position: fixed;
  z-index: 99;
  top: 0;
  left: 0;
  display: flex;
  transition: visibility 0s, opacity 0.5s ease-in-out;
  visibility: hidden;
  opacity: 0;
  background: rgba(73, 73, 73, 0.8);
  width: 100%;
  height: 100vh;
  align-items: flex-start;
}

.purposes-banner-wrapper {
  max-width: 625px;
  height: 100%;
  background: var(--secundary-color);
  border-radius: 0 10px 10px 0;
}

.purposes-banner-content {
  padding: 1em;
  display: flex;
  flex-direction: column;
  height: 95vh;
  justify-content: space-between;
}

.purposes-banner-text-wrapper {
  padding: 0 0 1.5em;
  margin: 0 1em;
  border-bottom: 1px #bababa63 solid;
}

.purposes-banner-title {
  margin-bottom: 0.7em;
  font-size: 1.1em;
  font-family: var(--bold-font);
}

.purposes-banner-text {
  line-height: 1.75;
  font-size: 0.9em;
  margin: 0;
}

.purposes-banner-link {
  color: var(--primary-color);
}

.purposes-banner-link:hover {
  color: grey;
}

/* purpose */

.purpose-wrapper {
  padding: 0 1em 1.5em 1em;
  flex: 1;
  overflow-y: auto;
  margin-top: 2em;
}

/* purpose scroll */

.purpose-wrapper::-webkit-scrollbar {
  -webkit-appearance: none;
}

.purpose-wrapper::-webkit-scrollbar:vertical {
  width: 9px;
}

.purpose-wrapper::-webkit-scrollbar-button:incement,
.purpose-wrapper::-webkit-scrollbar-button {
  display: none;
}

.purpose-wrapper::-webkit-scrollbar-thumb {
  background-color: rgb(88, 88, 88);
  border-radius: 10px;
  border: 2px solid rgb(88, 88, 88);
}

.purpose-wrapper::-webkit-scrollbar-track {
  border-radius: 5px;
}

/* purpose content */

.purpose-content {
  border: 1px #bababa63 solid;
  margin-bottom: 1em;
  border-radius: 3px;
  padding: 1em 0 1em 1em;
}

.purpose-details > summary {
  cursor: pointer;
  font-family: var(--bold-font);
}

/* services */

.service-content {
  width: 92%;
  margin: 1em auto;
}

.service-description {
  font-size: 0.8em;
  margin: 0.5em 0 0 1.5em;
}

/* cookies wrapper*/

.cookies-wrapper {
  margin: 0.5em 0 1.5em 1.5em;
}

.cookies-wrapper > summary {
  list-style-type: none;
  cursor: pointer;
  font-family: var(--regular-font);
  color: grey;
  text-decoration: underline;
  font-size: 12px;
}

/* cookies table */

.cookie-content {
  margin: 1em 0;
  width: 100%;
}

.cookie-content > tbody {
  font-size: 0.75em;
}

.cookie-row {
  background-color: #f1f1f1;
}

.cookie-row > td {
  border: none;
  padding: 7px;
}

.cookie-row > td:nth-child(1) {
  width: 75px;
}

.cookies-subtitle {
  color: grey;
  font-size: 0.8em;
}

.cookies-subtitle-description {
  font-size: 0.7em;
  border: 1px #bababa63 solid;
  border-radius: 3px;
  padding: 0.7em;
  line-height: 1.5;
}

.cookies-legal-link-wrapper {
  margin: 2em auto;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 95%;
}

.cookies-legal-link {
  font-size: 0.7em;
  text-decoration: underline;
  cursor: pointer;
  color: grey;
  padding-bottom: 0.5em;
}

@media screen and (max-width: 800px) {
  .banner {
    align-items: flex-end;
  }

  .banner-wrapper {
    width: auto;
    border-radius: 10px 10px 0 0;
    position: fixed;
    bottom: env(safe-area-inset-bottom, 0);
  }

  .banner-buttons-wrapper {
    flex-direction: column-reverse;
    width: 100%;
    gap: 10px;
  }

  .button-preferences,
  .button-decline,
  .button-accept,
  .button-save,
  .button-accept-all,
  .button-decline-all {
    width: 100%;
    max-width: 100%;
    padding: 0.5em 1em;
    font-size: 0.9em;
  }

  .buttons-purpose-wrapper {
    flex-direction: column-reverse;
    gap: 10px;
    width: 95%;
    margin: auto;
    padding: 1.5em 0 0;
  }

}

@media screen and (max-width: 600px) {
  .purposes-banner-wrapper {
    max-width: 100%;
  }

  .purposes-banner-content {
    height: 87vh;
}

  .banner-title {
    font-size: 1em;
  }

  .purposes-banner-title {
    font-size: 1em;
    margin-top: 0;
  }

  .banner-text,
  .purposes-banner-text,
  .service-title {
    font-size: 0.75em;
  }

  .purpose-details > summary,
  .service-title {
    font-size: 0.9em;
  }

  .service-description,
  .cookies-subtitle {
    font-size: 0.75em;
  }

  .service-description {
    margin: 0.5em 0 0 0.5em;
  }

  .purposes-banner-text-wrapper {
    margin: 0 0.5em;
  }

  .purpose-wrapper {
    padding: 0 1em 1.5em 0.5em;
  }

  .purpose-content {
    padding: 0.75em 0 0.75em 0.75em;
  }

  .service-content {
    width: 100%;
    margin: 1em auto 0.5em auto;
  }

  .cookies-wrapper {
    margin: 0.5em 1em 1.5em 0.5em;
  }

  .cookies-legal-link-wrapper {
    margin: 1em auto;
    width: 100%;
  }
}

